src/objects/Contract_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Checklists</relationshipLabel>
        <relationshipName>Contract_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjust_Sort_Order_Value_To_APAC_Only__c</fullName>
        <description>Sort order value</description>
        <label>Adjust Sort Order Value To (APAC Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Notification_Method__c</fullName>
        <label>Booking Notification Method</label>
        <picklist>
            <picklistValues>
                <fullName>ARI/BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC/BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extranet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <label>Checklist Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New-Reactivation/GDS to ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBP Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Accounts – New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Accounts – Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Lodging - New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Lodging - Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Deposit Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Standard Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Show Ticket Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS non Standard Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Standard Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Rate Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DS Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Complete_Date__c</fullName>
        <label>Contract Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Loading_Time__c</fullName>
        <label>Contract Loading Time</label>
        <summarizedField>Contract_Loading_Step__c.Open_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Loading_Step__c.Contract_Loading_Step__c</field>
            <operation>equals</operation>
            <value>In Approval Process, Ready to Load - Rate Sheet Only, Ready to Load - Contract, Contract Returned to MM/MC-See Comments, Contract Returned to Loading Team, Rejected - Returned to Loading, Requested ID&apos;s(Vendor or Expedia ID), Loading Contract, Contract Re</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Loading_Step__c.Contract_Checklist__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Loaded_by__c</fullName>
        <label>Contract Manager Loaded by</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upload_Date__c</fullName>
        <label>Contract Manager Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_QA_Complete_Date__c</fullName>
        <label>Contract QA Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Ready_for_QA_Complete_Date__c</fullName>
        <label>Contract Ready for QA Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Loading_Date__c</fullName>
        <label>Contract Start Loading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Year__c</fullName>
        <label>Contract Year</label>
        <picklist>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Policy_Reason__c</fullName>
        <inlineHelpText>If the default setting (0) for Cut Off Policy was not selected, please provide a reason.</inlineHelpText>
        <label>Cut Off Policy Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Policy__c</fullName>
        <inlineHelpText>0 is the default setting</inlineHelpText>
        <label>Cut Off Policy</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_ARI_Completed_Property_Activated__c</fullName>
        <label>Date ARI Completed Property Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Additional_Inventory_Load_Complete__c</fullName>
        <label>Date Additional Inventory Load Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Addtional_Inventory_Was_Loaded__c</fullName>
        <label>Date Addtional Inventory Was Loaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Data_Received_From_Chain__c</fullName>
        <label>Date Data Received From Chain</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Data_Upload_Requested_From_Chain__c</fullName>
        <label>Date Data Upload Requested From Chain</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HIMS_Loaded__c</fullName>
        <label>Date HIMS Loaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_ID_Requested__c</fullName>
        <label>Date ID Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_MM_Notified__c</fullName>
        <label>Date MM Notified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Rates_Effective__c</fullName>
        <description>Field from PSG</description>
        <label>Date Rates Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_by_Loading_Team__c</fullName>
        <label>Date Received by Loading Team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned_to_Loading_Team_From_MM_MC__c</fullName>
        <label>Date Returned to Loading Team From MM/MC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Returned_to_MM_MC__c</fullName>
        <label>Date Returned to MM/MC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delete_All_Existing_Extranet_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates to contract loading if all existing extranet accounts should be deleted when loading this contract</description>
        <inlineHelpText>Selecting this box will remove all existing extranet users from from the hotel account and a new &apos;etx&apos; account will be created. (This will not delete the previous extranet user account/s itself).</inlineHelpText>
        <label>Delete All Existing Extranet Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_Instructions__c</fullName>
        <inlineHelpText>Enter here any additional information and instructions for the contract loading team, pay attention to non standard or approved changes and details to help the teams load the contract.</inlineHelpText>
        <label>Details &amp; Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Completed__c</fullName>
        <label>DocuSign Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocuSign_Elapsed_Time__c</fullName>
        <formula>(NOW() - DocuSign_Sent__c ) - (NOW() - DocuSign_Completed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocuSign Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Sent__c</fullName>
        <label>DocuSign Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <label>DocuSign Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Envelope_ID__c</fullName>
        <label>Docusign Envelope ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Mail_Received_Date__c</fullName>
        <label>Docusign Mail Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Docusign_Mail_Received__c</fullName>
        <label>Docusign Mail Received</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_to_Ownership_Change__c</fullName>
        <label>Due to Ownership Change</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes/Bankruptcy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_of_Inventory__c</fullName>
        <description>How many years of rates and inventory the property signed up for with this contract.</description>
        <inlineHelpText>How many years of rates and inventory the property signed up for with this contract.</inlineHelpText>
        <label>Duration of Inventory (years)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EQC_Addendum_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the EQC addendum is attached with the contract.</description>
        <inlineHelpText>Select this box to initiate a connectivity build for the hotel. Attach the EQC addendum in the SF account.</inlineHelpText>
        <label>EQC Addendum Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elapsed_Days_with_MM__c</fullName>
        <label>Elapsed Days with MM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enroll_in_Hotwire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates property will be enrolled in hotwire</description>
        <inlineHelpText>The Hotwire team will contact the hotel directly when this box is selected</inlineHelpText>
        <label>Enroll in Hotwire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <description>Field from PSG</description>
        <label>Evergreen</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expedia_Audit_Date__c</fullName>
        <label>Expedia Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedia_Audit_by__c</fullName>
        <label>Expedia Audit by</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedia_Id__c</fullName>
        <formula>Account__r.Expedia_Hotel_Id__c</formula>
        <label>Expedia Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contract_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Id for contract in external system (PSG Salesforce)</description>
        <externalId>true</externalId>
        <label>External Contract Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Contract_Number__c</fullName>
        <description>Number of Contract record in PSG Salesforce</description>
        <label>External Contract Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extranet_User_Details__c</fullName>
        <description>Stores the extranet account details created during contract loading</description>
        <label>Extranet User Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HIMS_Loaded_by__c</fullName>
        <label>HIMS Loaded by</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Creation_Time__c</fullName>
        <formula>ID_Received_Date__c - Date_ID_Requested__c</formula>
        <label>ID Creation Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Loaded_By__c</fullName>
        <label>ID Loaded By</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Received_Date__c</fullName>
        <label>ID Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Requested_By__c</fullName>
        <label>ID Requested By</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Requested__c</fullName>
        <label>ID Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Expedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Id_Request_Time__c</fullName>
        <description>Date id requested - docusign mail received date
Modified label to Expedia ID Request TIme - 9/25/08 (as per Manish request)
Modified formula, removed ROUND, added 2 decimal places - 9/30/08
Modified formula, added test for Returned MM_MC_Date - 9/26/11</description>
        <formula>IF( NULLVALUE(Date_Returned_to_MM_MC__c,NOW())  &lt;  Date_ID_Requested__c ,(Docusign_Mail_Received_Date__c -  Date_Returned_to_MM_MC__c  ), (Docusign_Mail_Received_Date__c -  Date_ID_Requested__c  ))</formula>
        <inlineHelpText>Value in days, with weekends</inlineHelpText>
        <label>Id  Request Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Inventory_and_Rates__c</fullName>
        <description>Last day that property is giving us inventory and rates.</description>
        <inlineHelpText>If rates and availability have been provided for more than 2 years, this field will send a reminder to CL to load additional inventory when the system opens.</inlineHelpText>
        <label>Last Date of Inventory on Rate Sheet</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Contract_on_Stop_Sell__c</fullName>
        <inlineHelpText>Hotels will be loaded OPEN for sale, unless indicated here.  Select YES to load on stop sell.</inlineHelpText>
        <label>Load Contract on Stop Sell?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Load_Lar_or_Net_Rate__c</fullName>
        <description>LAR = Lowest Available Rates (Public rates) 
Net = The amount Expedia pays the hotel for the room</description>
        <inlineHelpText>Determines if contract loading should load the rates provided in the R&amp;A as LAR or Net for new contracts or renewals.  For EMEA use only.</inlineHelpText>
        <label>Load LAR or Net Rates (EMEA Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loading_Contract_Date__c</fullName>
        <label>Loading Contract Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MM_Query_Response_Time__c</fullName>
        <label>MM Query Response Time</label>
        <summarizedField>Contract_Loading_Step__c.Open_Time__c</summarizedField>
        <summaryFilterItems>
            <field>Contract_Loading_Step__c.Contract_Loading_Step__c</field>
            <operation>equals</operation>
            <value>Contract Returned to MM/MC-See Comments</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Loading_Step__c.Contract_Checklist__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Account_Name__c</fullName>
        <description>Allows for the entry of a new account name that will trigger an email to update the www.everestadmintool.com</description>
        <inlineHelpText>Use this field for new contract submissions only. Notification will be sent to HDM.</inlineHelpText>
        <label>New Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Activities_Activated_By__c</fullName>
        <description>Field from PSG</description>
        <label>New Activities Activated By</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows for the input of a new brand name that will trigger an email to update the brand in www.everestadmintool.com</description>
        <inlineHelpText>Notification will be sent to HDM.</inlineHelpText>
        <label>New Brand Name</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contract Checklists</relationshipLabel>
        <relationshipName>Contract_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKG_Margin__c</fullName>
        <inlineHelpText>Select your package margin percentage rate (10-75).</inlineHelpText>
        <label>PKG Margin % (GSA)</label>
        <picklist>
            <picklistValues>
                <fullName>No Package Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PKG_Min_Margin_Amount__c</fullName>
        <inlineHelpText>Select a dollar amount. If your hotel has no dollar amount, enter in 0.00.</inlineHelpText>
        <label>PKG Min $ Margin Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSG_Checklist_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User that created checklist in PSG Salesforce</description>
        <label>PSG Checklist Created By</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>Contract Checklists</relationshipLabel>
        <relationshipName>Contract_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSG_Checklist_Created_Date__c</fullName>
        <description>Date checklist was created in PSG Salesforce</description>
        <label>PSG Checklist Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSG_Checklist_Last_Modified_Date__c</fullName>
        <description>Date checklist was last modified in PSG Salesforce</description>
        <label>PSG Checklist Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSG_Checklist_Last_Modifiied_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that last modified checklist in PSG Salesforce</description>
        <label>PSG Checklist Last Modifiied By</label>
        <referenceTo>PSG_User__c</referenceTo>
        <relationshipLabel>Contract Checklists (PSG Checklist Last Modifiied By)</relationshipLabel>
        <relationshipName>Contract_Checklists_Last_Modified</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSG_RecordType__c</fullName>
        <description>Developer Name of record type in PSG</description>
        <label>PSG RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Rate_Information_Amer_Only__c</fullName>
        <inlineHelpText>Rate sheet - Enter package rates from the rate sheet 

PPA - Enter a XX% package DRR from the PPA as indicated 

No Action - Package DRRs or rate plans already established, no action required</inlineHelpText>
        <label>Package Rate Information (Amer Only)</label>
        <picklist>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Sheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <label>Payment Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Armenian Dram (AMD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Dollar (AUD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahraini Dinar (BHD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian Real (BRL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Dollar (CAD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP Franc (XPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Yuan (Reminbi) (CNY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombian Peso (COP)-Limited Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Koruna (CZK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish Krone (DKK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro (EUR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji Dollar (FJD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Britian Pound Sterling (GBP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Dollar (HKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iceland Krona (ISK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Rupee (INR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JapaneseYen (JPY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean Won (KRW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuwaiti Dinar (KWD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysian Ringitt (MYR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maltese Lira (MTL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican Peso (MXN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moroccan Dirham (MAD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Dollar (NZD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian Krone (NOK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omani Rial (OMR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippine Peso (PHP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland Zloty (PLN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qatari Rial (QAR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Rouble (RUB)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <inlineHelpText>PDP - Per Day Pricing 
PPP - Per Person Pricing 
OBP - Occupancy Based Pricing</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>PDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Submitted_By_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Submitted By Contact2(EMM Only)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Checklists (Property Submitted By Contact2(EMM Only))</relationshipLabel>
        <relationshipName>Contract_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Submitted_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of contact that submitted the property</description>
        <label>Property Submitted By (EMM &amp; LATAM)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Checklists</relationshipLabel>
        <relationshipName>Contract_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Submitted_Ext_Acct_EMM_LATAM__c</fullName>
        <label>Property Submitted Ext Acct(EMM &amp; LATAM)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_By__c</fullName>
        <label>QC By</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Completed_Date__c</fullName>
        <label>QC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RS_should_overrule_Rates_and_Inventory__c</fullName>
        <label>RS should overrule Rates and Inventory</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>